main.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
input,
button,
textarea,
select {
  font: inherit;
}
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 
https://coolors.co/visualizer/ff99c8-fcf6bd-d0f4de-a9def9-e4c1f9 
https://www.rawkblog.com/2018/05/modular-scale-typography-with-css-variables-and-sass/ 
*/

:root {
  --carnation-pink: hsla(332, 100%, 80%, 1);
  --lemon-chiffon: hsla(54, 91%, 86%, 1);
  --nyanza: hsla(143, 62%, 89%, 1);
  --uranian-blue: hsla(200, 87%, 82%, 1);
  --mauve: hsla(278, 82%, 87%, 1);
  --portfolio-white: #ffffff;
  --portfolio-black: #000000;
  --text-size: 1rem;
  --ratio: 1.333;
  --small-text: calc(var(--text-size) * var(--ratio));
  --med-text: calc(var(--small-text) * var(--ratio));
  --large-text: calc(var(--med-text) * var(--ratio));
  --xl-text: calc(var(--large-text) * var(--ratio));
  --small-spacing: 1rem;
  --xs-spacing: calc(var(--small-spacing) * 0.75);
  --med-spacing: calc(var(--small-spacing) * 2.5);
  --large-spacing: calc(var(--med-spacing) * 2.5);
  --xl-spacing: calc(var(--large-spacing) * 2.5);
}

body {
  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  color: var(--portfolio-black);
  max-width: 1280px;
  margin: 0 auto;
  padding: 0 var(--small-spacing);
}

.about {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.experience {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.projects {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.project-body {
  display: flex;
  flex-direction: column;
  gap: var(--med-spacing);
}

.project-image {
  width: 100%;
  aspect-ratio: 1/1;
}

.projects p {
  max-width: 80ch;
}

.project-info p {
  max-width: 60ch;
}

.pink {
  color: var(--carnation-pink);
}

.blue {
  color: var(--uranian-blue);
}

header {
  position: sticky;
  top: 0;
  background-color: var(--portfolio-white);
  padding: var(--med-spacing) 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: var(--small-spacing);
}

nav {
  display: flex;
  justify-content: start;
  gap: var(--small-spacing);
}

main {
  margin-top: var(--med-spacing);
}

h1,
h2,
h3 {
  line-height: 1.2;
}

h2 {
  margin-bottom: var(--small-spacing);
}

h3 {
  margin: var(--med-spacing) 0 var(--small-spacing) 0;
}

p,
a {
  font-size: var(--font-size);
  color: var(--portfolio-black);
}

p {
  margin-bottom: var(--small-spacing);
}

.link-container a {
  font-weight: 700;
  text-decoration-color: var(--mauve);
}

ul {
  padding-inline-start: 0;
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  gap: var(--small-spacing);
}

li {
  display: flex;
  flex-direction: column;
  align-content: center;
  gap: var(--xs-spacing);
  margin-bottom: var(--xs-spacing);
}

i {
  text-align: center;
}

.xl-text {
  font-size: var(--xl-text);
}

.large-text {
  font-size: var(--large-text);
}

.med-text {
  font-size: var(--med-text);
}

.small-text {
  font-size: var(--small-text);
}

.uppercase {
  text-transform: uppercase;
}

.bold {
  font-weight: 700;
}

.contact i {
  font-size: var(--large-text);
}

.fe-icons i {
  font-size: var(--large-text);
  color: var(--mauve);
}

.be-icons i {
  font-size: var(--large-text);
  color: var(--uranian-blue);
}

.other-icons i {
  font-size: var(--large-text);
  color: var(--carnation-pink);
}

section {
  margin-bottom: var(--large-spacing);
}

article {
  margin-bottom: var(--med-spacing);
}

.project-name {
  color: var(--uranian-blue);
}

.link-container {
  display: flex;
  gap: var(--small-spacing);
}

.subtitle {
  display: block;
}

.peep {
  display: none;
}

@media screen and (min-width: 820px) {
  .project-body {
    flex-direction: row;
  }

  .project-image {
    width: 60%;
    aspect-ratio: 16/9;
  }

  .about-copy {
    column-width: 30ch;
    column-gap: var(--med-spacing);
    column-rule: 1px solid var(--nyanza);
    text-justify: distribute;
  }

  .intro {
    height: 80vh;
    display: flex;
    align-items: center;
    justify-content: space-around;
  }

  .peep {
    display: block;
    transform: rotateY(180deg);
    height: 80%;
  }
}

@media screen and (min-width: 920px) {
  header {
    gap: var(--med-spacing);
  }

  nav {
    justify-content: end;
  }
}

